JVM Flag Menu Added